# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,8 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import locationsRouter from "./locations";
 import categoriesRouter from "./categories";
+import unitsRouter from "./units";
+import shelvesRouter from "./shelves";
 import inventoryRouter from "./inventory";
 import transactionsRouter from "./transactions";
 import shiftsRouter from "./shifts";
@@ -21,6 +23,8 @@ router.use(healthRouter);
 router.use("/auth", authRouter);
 router.use("/locations", locationsRouter);
 router.use("/categories", categoriesRouter);
+router.use("/units", unitsRouter);
+router.use("/shelves", shelvesRouter);
 router.use("/inventory", inventoryRouter);
 router.use("/transactions", transactionsRouter);
 router.use("/shifts", shiftsRouter);
